# request-bin

./: Cargo.toml  README.md  update-github.sh  update.sh
.github/workflows/: build-and-deploy.yml
src/: main.rs
static/: app.js  index.html  style.css
