[package]
name = "rust-request-bin"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web server
axum = "0.7"
# Runtime async dengan fitur 'full' untuk macros dan network
tokio = { version = "1", features = ["full"] }
# Serialisasi data
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
# Waktu dan ID unik dengan fitur 'v4'
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
# Utility untuk folder
walkdir = "2"
# Memory management untuk Mini PC
jemallocator = "0.5"
# HTTP middleware untuk CORS dan static files
tower-http = { version = "0.5", features = ["cors", "fs"] }